--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
     
                 <!--Links-->
                 <section>
-                    <a target="_bLank" href="#"></a><br>
-                    <a target="_bLank" href="#"></a><br>
-                    <a target="_bLank" href="#"></a><br>
+                    <a target="_bLank" href="https://cloudstack12.github.io/captainit--3/">https://cloudstack12.github.io/captainit--3/</a><br>
+                    <a target="_bLank" href="https://jade-pie-35a543.netlify.app/">https://jade-pie-35a543.netlify.app/</a><br>
+                    <a target="_bLank" href="https://kherkroldanseo.s3.ap-northeast-1.amazonaws.com/captainit--3/index.html">https://kherkroldanseo.s3.ap-northeast-1.amazonaws.com/captainit--3/index.html</a><br>
                 </section>
     
             </div>
